# arxiv-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  spec.md
arxiv-rag/: chunk.py  download.py
arxiv_rag/: arxiv_ids.py  chroma_client.py  chroma_inspect.py  chunk.py  chunk_ids.py  cli.py  db.py  download.py  embeddings_client.py  evaluate.py  generate.py  indexer.py  parse.py  retrieve.py  verify.py
arxiv_rag/prompts/: generate_eval_qa.txt  generate_quote_first.txt  generate_with_chunk_citations.txt  generate_with_citations.txt  repair_citations.txt  select_evidence.txt  select_quote.txt
eval/: REVIEW.md  eval_set.json
tests/: test_chroma_inspect.py  test_chunking.py  test_cli_index_ingest.py  test_download.py  test_embeddings.py  test_evaluate.py  test_generate.py  test_indexer.py  test_parse_pdf.py  test_query_log.py  test_retrieve.py  test_retrieve_chroma.py  test_retrieve_hybrid.py  test_verify.py
