[project]
name = "arxiv-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=2.1.0",
    "pymupdf>=1.23",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "tiktoken>=0.11.0",
    "typer>=0.12.3",
]

[project.scripts]
arxiv-rag = "arxiv_rag.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]
