[project]
name = "arxiv-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.0",
    "httpx[socks]>=0.28.1",
    "openai>=1.58.1",
    "pymupdf>=1.23",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "tenacity>=8.2.3",
    "tiktoken>=0.11.0",
    "typer>=0.12.3",
]

[project.scripts]
arxiv-rag = "arxiv_rag.cli:app"

[project.optional-dependencies]
vector = [
    "chromadb>=0.5.0; python_version < '3.14'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]

